--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -91,14 +91,33 @@ jobs:
           
           # Wait for container to start (JVM needs more time)
           echo "Waiting for container to start..."
+          READY=false
           for i in {1..30}; do
+            # Check if container is still running
+            if ! docker ps | grep -q test-container; then
+              echo "Container crashed!"
+              docker logs test-container 2>&1 || true
+              exit 1
+            fi
+            
             if curl -s http://localhost:8080/api/auth/me > /dev/null 2>&1; then
               echo "Container is ready!"
+              READY=true
               break
             fi
             echo "Attempt $i/30 - waiting..."
             sleep 2
           done
+          
+          # Show container logs for debugging
+          echo "=== Container logs ==="
+          docker logs test-container 2>&1 || true
+          echo "======================"
+          
+          if [ "$READY" = "false" ]; then
+            echo "Container failed to start in time"
+            exit 1
+          fi
           
           # Health check - /api/auth/me returns 401 when not authenticated (server is working)
           HTTP_CODE=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:8080/api/auth/me)
@@ -108,7 +127,6 @@ jobs:
             echo "Container is healthy!"
           else
             echo "Container health check failed with HTTP $HTTP_CODE"
-            docker logs test-container
             exit 1
           fi
           
